# MNN

source/backend/cpu/riscv/: CMakeLists.txt
source/backend/csinn2/: CMakeLists.txt
source/backend/csinn2/backend/: CSINN2Backend.cpp  CSINN2Backend.hpp
source/backend/csinn2/execution/: CSINN2CommonExecution.cpp  CSINN2CommonExecution.hpp
